static/css/bluebix_offer.css
@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');

@page {
    size: A4;
    margin: 0;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
    font-family: 'Tinos', 'Liberation Serif', 'Times New Roman', Times, serif;
}

.page {
    width: 595.27pt;
    height: 841.89pt;
    position: relative;
    page-break-after: always;
    padding-top: 75pt;
    padding-left: 39.2pt;
    padding-right: 39.2pt;
    padding-bottom: 45pt;
    font-size: 10.5pt;
    line-height: 1.15;
    color: #000000;
    overflow: hidden;
}
.header {
    position: absolute;
    top: 0;
    left: 0;
    width: 595.27pt;
    height: 70pt;
    text-align: center;
}
.logo {
    margin-top: 6.95pt;
    width: 97pt;
    height: 48.7pt;
}
.header-line-img {
    position: absolute;
    top: 61.9pt;
    left: 0;
    width: 595.27pt;
    height: 3.5pt;
}
.footer {
    position: absolute;
    bottom: 14pt;
    left: 0;
    width: 595.27pt;
    text-align: center;
    z-index: 100;
}
.footer-line {
    width: 535pt;
    height: 1.0pt;
    background-color: #000000;
    margin: 0 auto 5pt auto;
}
.footer-text {
    font-size: 10.0pt;
    font-family: 'Tinos', 'Liberation Serif', 'Times New Roman', Times, serif;
    color: #000000;
    text-align: center;
    line-height: 1.15;
}
p {
    margin-bottom: 7pt;
    text-align: justify;
}
.bold {
    font-weight: bold;
}
.center {
    text-align: center;
}
.right {
    float: right;
}
.date-row {
    margin-bottom: 10pt;
    overflow: hidden;
}
.candidate-address {
    margin-bottom: 10pt;
    line-height: 1.2;
}
.subject {
    margin-top: 8pt;
    margin-bottom: 10pt;
    text-decoration: underline;
}
ul.bullets {
    margin-bottom: 7pt;
    margin-left: 20pt;
}
ul.bullets li {
    margin-bottom: 3pt;
    list-style-type: disc;
    padding-left: 2pt;
    text-align: justify;
}
.letter-list {
    margin-bottom: 7pt;
}
.list-item {
    margin-bottom: 5pt;
    text-align: justify;
    position: relative;
    padding-left: 15pt;
}
.list-num {
    position: absolute;
    left: 0;
    top: 0;
}
.contingency-list {
    margin-bottom: 7pt;
}
.contingency-item {
    margin-bottom: 5pt;
    text-align: justify;
    position: relative;
    padding-left: 15pt;
}
.contingency-bullet {
    position: absolute;
    left: 0;
    top: 0;
    font-family: "Segoe UI Symbol", sans-serif;
}
.sub-list {
    margin-top: 3pt;
    margin-left: 5pt;
}
.sub-item {
    margin-bottom: 3pt;
    text-align: justify;
    position: relative;
    padding-left: 15pt;
}
.sub-num {
    position: absolute;
    left: 0;
    top: 0;
}
.sub-sub-list {
    margin-top: 3pt;
    margin-left: 15pt;
}
.signatures-wrapper {
    position: relative;
    margin-top: 10pt;
    left: 0;
    width: 516.87pt;
    height: 65pt;
}
.sig-col-left {
    position: absolute;
    left: 2.55pt;
    top: 0;
    width: 200pt;
}
.sig-col-right {
    position: absolute;
    left: 304.3pt;
    top: 0;
    width: 200pt;
}
.sig-img {
    height: 25pt;
    margin-bottom: 4pt;
    display: block;
}
.sig-name-with-img {
    font-size: 10.5pt;
    line-height: 1.15;
}
.sig-title {
    font-size: 10.5pt;
    line-height: 1.15;
}
/* Page 1 overrides */
#page-1 {
    line-height: 1.15;
}
#page-1 p {
    margin-bottom: 6.5pt;
}
#page-1 .candidate-address {
    margin-bottom: 7pt;
}
#page-1 .date-row {
    margin-bottom: 7pt;
}
#page-1 .subject {
    margin-top: 6pt;
    margin-bottom: 7pt;
}
#page-1 .letter-list {
    margin-bottom: 6.5pt;
}
#page-1 .list-item {
    margin-bottom: 4.0pt;
}
#page-1 ul.bullets {
    margin-bottom: 6.5pt;
}
#page-1 ul.bullets li {
    margin-bottom: 2.5pt;
}

/* Page 2 overrides */
#page-2 p {
    margin-bottom: 10.0pt;
}
#page-2 .contingency-list {
    margin-bottom: 10.0pt;
}
#page-2 .contingency-item {
    margin-bottom: 12.0pt;
}

/* Page 3 overrides */
#page-3 p {
    margin-bottom: 7.5pt;
}
#page-3 .contingency-list {
    margin-bottom: 7.5pt;
}
#page-3 .contingency-item {
    margin-bottom: 7.5pt;
}
#page-3 .sub-list {
    margin-top: 3.0pt;
}
#page-3 .sub-item {
    margin-bottom: 5.0pt;
}

/* Page 4 overrides */
#page-4 {
    font-size: 9.8pt;
    line-height: 1.1;
}
#page-4 p {
    margin-bottom: 3pt;
}
#page-4 .sub-list {
    margin-bottom: 3pt;
}
#page-4 .sub-item {
    margin-bottom: 1.5pt;
}
#page-4 ul.bullets {
    margin-bottom: 3pt;
}
#page-4 ul.bullets li {
    margin-bottom: 1pt;
}
#page-4 .signatures-wrapper {
    margin-top: 6pt;
}
#page-4 .sig-img {
    height: 20pt;
    margin-bottom: 2pt;
}

/* Page 5 Annexure */
.annexure-title {
    margin-top: 0;
    margin-bottom: 12pt;
    font-size: 10.6pt;
}
.annexure-table {
    width: 401pt;
    margin: 0 auto;
    border-collapse: collapse;
    font-family: Calibri, sans-serif;
    font-size: 11pt;
}
.annexure-table td {
    border: 1.5pt solid #000000;
    padding: 2.5pt 6pt;
    vertical-align: middle;
}
.annexure-table .blank-row td {
    height: 12pt;
    border-top: none;
    border-bottom: none;
    padding: 0;
}
.annexure-table .label-cell {
    width: 221pt;
}
.annexure-table .val-cell {
    width: 180pt;
}
.annexure-table .header-row td {
    background-color: transparent;
}
.annexure-table .highlight-row td {
    background-color: #B4C6E7 !important;
}
.right-align {
    text-align: right;
}
.note-text {
    width: 401pt;
    margin: 12pt auto 0 auto;
    font-size: 10.6pt;
    line-height: 1.25;
}

